<resources>
    <string name="app_name">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_note">Add note</string>
    <string name="all_notes">All notes</string>
    <string name="title">Title</string>
    <string name="write_a_note">write a note</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_photo_from_gallery">Add photo from gallery</string>
    <string name="to_make_a_photo">To make a photo</string>
    <string name="date_picker_title">Date reminder note</string>
    <string name="time_picker_title">Time reminder note</string>
    <string name="date_fragment_title">Alert settings</string>
    <string name="no_notes">No notes</string>
    <string name="cancel">Cancel</string>
    <string name="all_choice">All</string>
    <string name="choice_d">Selected %1$d</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="empty_fields">Fill in the empty fields</string>
    <string name="note_made">note made:\u0020</string>
    <string name="title_report">Title:\u0020</string>
    <string name="photo_details">Photo Details</string>
    <string name="ticker_text_notification">Reminder</string>
    <string name="nil_choice">nil</string>
    <string name="list_reminders">List reminders</string>
    <string name="edit_note">Edit note</string>
    <string name="search">Search</string>
</resources>
