<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/root_list_notes"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_choice"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/count_choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="choice 2"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/all_choice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/all_choice"
            android:textColor="@android:color/white"
            android:gravity="center" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_choice"></android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/layout_delete"
        app:layout_constraintTop_toBottomOf="@+id/list_notes"
        tools:visibility="visible">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:alpha="0.5"
            app:srcCompat="@drawable/ic_notes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_notes"
            android:textSize="24sp" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/layout_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_delete"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
